gcc/testsuite/gdc.test/compilable/imports/defab.d

module imports.defab;

private import defa;

public class B : A
{

	private import imports.defad;

	D parent;

	this() {}
}
