gcc/testsuite/gdc.test/fail_compilation/fail3673a.d
class A {}
class B : A if(false) { }
